--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=ecommerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5332/ecommerce_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/ecommerce_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
